--- a/dataprep.tex
+++ b/dataprep.tex
@@ -8,7 +8,7 @@ Data on GPU life times is constructed from two sources: inventory runs
 and failure event records. Two types of failure events were collected:
 Double Bit Error (DBE) and Off the Bus (OTB). DBE was found to be the
 ``signature'' error of eventual GPU failures and a trigger for their
-replacement. 
+replacement. \fix{RA: Should we point out that this replacement was only done later on?}
 
 An inventory of GPU serial numbers and their locations is recorded
 each time the system boots. \fix{Don, you mentioned that this was more
