--- a/discussion.tex
+++ b/discussion.tex
@@ -13,3 +13,8 @@
   mitigate fallout in terms of delivering computing to customers when
   facing machine disasters like the two episodes (2013 and 2016) on Titan?
 \end{itemize}
+
+\fix{RA: Recommendation for system operators if they see similar 
+wide-spread failures in their system well before the expected lifetime 
+of the machine. Should they replace all components or just partially
+upgrade the machine. Tradeoff?} 
