--- a/related.tex
+++ b/related.tex
@@ -18,7 +18,7 @@ Zimmer et al.~\cite{8665764} developed a new job scheduling strategy for Titan t
 
 Work by Kumar et al.~\cite{kumar18understanding} analyzed Titan's interconnect faults, errors and congestion events to improve interconnects resilience and congestion resolution methods. The results show that the magnitude of interconnect errors is very high with an uneven distribution across different types of links is uneven. They also show that congestion is highly frequent and bursty.
 %
-Gupta et al.~\cite{gupta17failures} performed a study covering five supercomputers at Oak Ridge National Laboratory, including Titan, that concentrated on developing an understanding of which and how many errors and failure occur in supercomputers over multiple generations and over their years of operation. This work resulted in a lot of lessons learned, including that the mean-time-to-failure (MTTF) can change drastically and non-monotonically over time.
+Gupta et al.~\cite{gupta17failures} performed a study covering five supercomputers at Oak Ridge National Laboratory, including Titan, that concentrated on developing an understanding of which and how many errors and failure occur in supercomputers over multiple generations and over their years of operation. This work resulted in a lot of lessons learned, including that the mean-time-to-failure (MTTF) can change drastically and non-monotonically over time. \fix{RA: inconsistent use of MTTF and MTBF}
 
 Bautista-Gomez et al.~\cite{bautista-gomez16reducing} used failure data from Titan to adapt the checkpoint frequency to the current reliability of the system using dynamic checkpointing.
 %
