Added more related work.

--- a/refs.bib
+++ b/refs.bib
@@ -61,8 +61,8 @@
                    and Christian Engelmann
                    and Evgenia Smirni
                    and Devesh Tiwari",
-  title         = "Machine Learning Models for GPU Error Prediction in a Large
-                   Scale HPC System",
+  title         = "Machine Learning Models for {GPU} Error Prediction in a Large
+                   Scale {HPC} System",
   booktitle     = "Proceedings of the \href{http://www.dsn.org}
                    {$48^{th}$ IEEE/IFIP International Conference on Dependable
                     Systems and Networks (DSN) 2018}",
@@ -87,7 +87,7 @@
                    and Christian Engelmann
                    and Devesh Tiwari",
   title         = "Understanding and Analyzing Interconnect Errors and Network
-                   Congestion on a Large Scale HPC System",
+                   Congestion on a Large Scale {HPC} System",
   booktitle     = "Proceedings of the \href{http://www.dsn.org}
                    {$48^{th}$ IEEE/IFIP International Conference on Dependable
                     Systems and Networks (DSN) 2018}",
@@ -222,3 +222,29 @@ keywords={Cray computers;failure analysis;mainframes;parallel machines;system re
 doi={10.1109/DSN.2014.62}, 
 ISSN={2158-3927}, 
 month={June},}
+
+@inproceedings{10.1145/2807591.2807666,
+author    = {Tiwari, Devesh and Gupta, Saurabh and Gallarno, George and Rogers, Jim and Maxwell, Don},
+title     = {Reliability Lessons Learned from {GPU} Experience with the {Titan} Supercomputer at {Oak Ridge Leadership Computing Facility}},
+year      = {2015},
+isbn      = {9781450337236},
+publisher = {Association for Computing Machinery},
+address   = {New York, NY, USA},
+url       = {https://doi.org/10.1145/2807591.2807666},
+doi       = {10.1145/2807591.2807666},
+booktitle = {Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
+articleno = {Article 38},
+numpages  = {12},
+location  = {Austin, Texas}, 
+series    = {SC '15} }
+
+@inproceedings{osti_1086655,
+title = {Understanding the Impact of Interconnect Failures on System Operation},
+author = {Ezell, Matthew A},
+booktitle = {Proceedings of the Cray User Group Conference (CUG)}, 
+year = {2013}
+}
+
+@INPROCEEDINGS{7446091, author={B. {Nie} and D. {Tiwari} and S. {Gupta} and E. {Smirni} and J. H. {Rogers}}, booktitle={2016 IEEE International Symposium on High Performance Computer Architecture (HPCA)}, title={A large-scale study of soft-errors on {GPUs} in the field}, year={2016}, volume={}, number={}, pages={519-530},}
+
+@INPROCEEDINGS{7266836, author={S. {Gupta} and D. {Tiwari} and C. {Jantzi} and J. {Rogers} and D. {Maxwell}}, booktitle={2015 45th Annual IEEE/IFIP International Conference on Dependable Systems and Networks}, title={Understanding and Exploiting Spatial Properties of System Failures on Extreme-Scale HPC Systems}, year={2015}, volume={}, number={}, pages={37-44}}
