--- a/refs.bib
+++ b/refs.bib
@@ -4,14 +4,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @article{Cox1972,
-  author =	 {D. R. Cox},
-  journal =	 {Journal of the Royal Statistical Society. Series B
-              (Methodological)},
-  number =	 {2},
-  pages =	 {187--220},
-  title =	 {Regression Models and Life-Tables},
-  volume =	 {34},
-  year =	 {1972}
+  author  = {D. R. Cox},
+  journal = {Journal of the Royal Statistical Society. Series B
+             (Methodological)},
+  number  = {2},
+  pages   = {187--220},
+  title   = {Regression Models and Life-Tables},
+  volume  = {34},
+  year    = {1972}
 }
 
 @Inbook{Harrell2015,
@@ -147,104 +147,133 @@
 }
 
 @Article{lubridate,
-    title = {Dates and Times Made Easy with {lubridate}},
-    author = {Garrett Grolemund and Hadley Wickham},
-    journal = {Journal of Statistical Software},
-    year = {2011},
-    volume = {40},
-    number = {3},
-    pages = {1--25},
-    url = {http://www.jstatsoft.org/v40/i03/},
-  }
-
-
-@INPROCEEDINGS{7056044, 
-author={D. {Tiwari} and S. {Gupta} and J. {Rogers} and D. {Maxwell} and P. {Rech} and S. {Vazhkudai} and D. {Oliveira} and D. {Londo} and N. {DeBardeleben} and P. {Navaux} and L. {Carro} and A. {Bland}}, 
-booktitle={2015 IEEE 21st International Symposium on High Performance Computer Architecture (HPCA)}, 
-title={Understanding {GPU} errors on large-scale {HPC} systems and the implications for system design and operation}, 
-year={2015}, 
-volume={}, 
-number={}, 
-pages={331-342}, 
-keywords={graphics processing units;parallel machines;GPU error;large-scale HPC system;system design;system operation;graphics hardware performance;programmability;graphics-specific accelerator;general-purpose computing device;performance efficiency;resilience characteristics;large-scale computing system;large-scale GPU-enabled system;Titan supercomputer;Oak Ridge Leadership Computing Facility;Los Alamos National Laboratory;neutron-beam test;Los Alamos Neutron Science Center;LANSCE;ISIS;Rutherford Appleron Laboratories;neutron-beam experiment;GPU architect;HPC computing facility;GPU resilience;Graphics processing units;Neutrons;Computer crashes;Error correction codes;Resilience;Laboratories;Supercomputers}, 
-doi={10.1109/HPCA.2015.7056044}, 
-ISSN={2378-203X}, 
-month={Feb},}
-
-@INPROCEEDINGS{8665764, 
-author={C. {Zimmer} and D. {Maxwell} and S. {McNally} and S. {Atchley} and S. S. {Vazhkudai}}, 
-booktitle={SC18: International Conference for High Performance Computing, Networking, Storage and Analysis}, 
-title={{GPU} Age-Aware Scheduling to Improve the Reliability of Leadership Jobs on {Titan}}, 
-year={2018}, 
-volume={}, 
-number={}, 
-pages={83-93}, 
-keywords={graphics processing units;mainframes;scheduling;job failures;leadership jobs;application failures;low-failure rate;high-failure rate GPUs;low-failure GPU hours;GPU age-aware scheduling;OLCF's Titan supercomputer;Graphics processing units;Peer-to-peer computing;Reliability;Job shop scheduling;Predictive models;Supercomputers}, 
-doi={10.1109/SC.2018.00010}, 
-ISSN={null}, 
-month={Nov},}
-
-@INPROCEEDINGS{6903564, 
-author={D. {Tiwari} and S. {Gupta} and S. S. {Vazhkudai}}, 
-booktitle={2014 44th Annual IEEE/IFIP International Conference on Dependable Systems and Networks}, 
-title={Lazy Checkpointing: {Exploiting} Temporal Locality in Failures to Mitigate Checkpointing Overheads on Extreme-Scale Systems}, 
-year={2014}, 
-volume={}, 
-number={}, 
-pages={25-36}, 
-keywords={checkpointing;parallel machines;lazy checkpointing;failure temporal locality;checkpointing overhead mitigation;extreme-scale systems;computational power;supercomputers;large-scale scientific applications;astrophysics;fusion;climate;combustion;long-running simulations;multiple system failures;resilience mechanism;application state storage;permanent storage;failure recovery;excessive I/O overhead;checkpoint size;resource utilization;system failure temporal characteristics;large-scale machines;extreme-scale machines;Checkpointing;Computational modeling;Lead;Supercomputers;Analytical models;Bandwidth;Exponential distribution;checkpointing;resilience;system failures;locality;extreme-scale;supercomputing;storage}, 
-doi={10.1109/DSN.2014.101}, 
-ISSN={2158-3927}, 
-month={June},}
-
-@INPROCEEDINGS{8809553, 
-author={S. {Di} and H. {Guo} and E. {Pershey} and M. {Snir} and F. {Cappello}}, 
-booktitle={2019 49th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)}, 
-title={Characterizing and Understanding {HPC} Job Failures Over The 2K-Day Life of {IBM BlueGene/Q} System}, 
-year={2019}, 
-volume={}, 
-number={}, 
-pages={473-484}, 
-keywords={fault tolerant computing;mainframes;multiprocessing systems;parallel machines;parallel processing;resource allocation;statistical distributions;Weibull distribution;job executions;core-hours;failed jobs;similarity-based event-filtering analysis;2k-day life;failure features;large-scale system maintenance;service quality;powerful supercomputers;multiple data sources;serviceability log;job scheduling log;behavior log;in-depth analysis;job-scheduling log;user behavior;job execution structure;HPC job failures;reliability availability and serviceability log;RAS;Supercomputers;Task analysis;Correlation;Reliability;Cobalt;Large-scale systems;Resilience;IBM BlueGene/Q System;Fault Tolerance;Failure Analysis;Supercomputer}, 
-doi={10.1109/DSN.2019.00055}, 
-ISSN={1530-0889}, 
-month={June},}
-
-@INPROCEEDINGS{6903615, 
-author={C. D. {Martino} and Z. {Kalbarczyk} and R. K. {Iyer} and F. {Baccanico} and J. {Fullop} and W. {Kramer}}, 
-booktitle={2014 44th Annual IEEE/IFIP International Conference on Dependable Systems and Networks}, 
-title={Lessons Learned from the Analysis of System Failures at Petascale: {The} Case of {Blue Waters}}, 
-year={2014}, 
-volume={}, 
-number={}, 
-pages={610-621}, 
-keywords={Cray computers;failure analysis;mainframes;parallel machines;system recovery;system failure analysis;Blue Waters;Cray hybrid supercomputer;CPU-GPU supercomputer;University of Illinois;Urbana-Champaign;manual failure reports;automatically generated event logs;single-node failures;GPU accelerator;file system error resiliency;system-wide outage analysis;hardware-related failures;memory protection mechanisms;x8 Chip kill;x4 Chip kill;ECC;parity;Lustre file system;Random access memory;Hardware;Graphics processing units;Blades;Maintenance engineering;Error correction codes;Failure Analysis;Failure Reports;Cray XE6;Cray XK7;Supercomputer;Machine Check;Nvidia GPU errors}, 
-doi={10.1109/DSN.2014.62}, 
-ISSN={2158-3927}, 
-month={June},}
-
-@inproceedings{10.1145/2807591.2807666,
-author    = {Tiwari, Devesh and Gupta, Saurabh and Gallarno, George and Rogers, Jim and Maxwell, Don},
-title     = {Reliability Lessons Learned from {GPU} Experience with the {Titan} Supercomputer at {Oak Ridge Leadership Computing Facility}},
-year      = {2015},
-isbn      = {9781450337236},
-publisher = {Association for Computing Machinery},
-address   = {New York, NY, USA},
-url       = {https://doi.org/10.1145/2807591.2807666},
-doi       = {10.1145/2807591.2807666},
-booktitle = {Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
-articleno = {Article 38},
-numpages  = {12},
-location  = {Austin, Texas}, 
-series    = {SC '15} }
-
-@inproceedings{osti_1086655,
-title = {Understanding the Impact of Interconnect Failures on System Operation},
-author = {Ezell, Matthew A},
-booktitle = {Proceedings of the Cray User Group Conference (CUG)}, 
-year = {2013}
+  title   = {Dates and Times Made Easy with {lubridate}},
+  author  = {Garrett Grolemund and Hadley Wickham},
+  journal = {Journal of Statistical Software},
+  year    = {2011},
+  volume  = {40},
+  number  = {3},
+  pages   = {1--25},
+  url     = {http://www.jstatsoft.org/v40/i03/},
 }
 
-@INPROCEEDINGS{7446091, author={B. {Nie} and D. {Tiwari} and S. {Gupta} and E. {Smirni} and J. H. {Rogers}}, booktitle={2016 IEEE International Symposium on High Performance Computer Architecture (HPCA)}, title={A large-scale study of soft-errors on {GPUs} in the field}, year={2016}, volume={}, number={}, pages={519-530},}
+@INPROCEEDINGS{7056044,
+  author    = {D. {Tiwari} and S. {Gupta} and J. {Rogers} and D. {Maxwell} and P. {Rech} and S. {Vazhkudai} and D. {Oliveira} and D. {Londo} and N. {DeBardeleben} and P. {Navaux} and L. {Carro} and A. {Bland}}, 
+  booktitle = {IEEE 21st International Symposium on High Performance Computer Architecture (HPCA) 2015}, 
+  title     = {Understanding {GPU} errors on large-scale {HPC} systems and the implications for system design and operation},
+  year      = {2015}, 
+  month     = feb # "~7-11, ",
+  pages     = {331-342}, 
+  doi       = {10.1109/HPCA.2015.7056044}, 
+  ISSN      = {2378-203X},
+  address   = {San Francisco, CA, USA}
+}
 
-@INPROCEEDINGS{7266836, author={S. {Gupta} and D. {Tiwari} and C. {Jantzi} and J. {Rogers} and D. {Maxwell}}, booktitle={2015 45th Annual IEEE/IFIP International Conference on Dependable Systems and Networks}, title={Understanding and Exploiting Spatial Properties of System Failures on Extreme-Scale HPC Systems}, year={2015}, volume={}, number={}, pages={37-44}}
+@INPROCEEDINGS{8665764,
+  author    = {C. {Zimmer} and D. {Maxwell} and S. {McNally} and S. {Atchley} and S. S. {Vazhkudai}}, 
+  booktitle = {International Conference for High Performance Computing, Networking, Storage and Analysis (SC) 2018}, 
+  title     = {{GPU} Age-Aware Scheduling to Improve the Reliability of Leadership Jobs on {Titan}}, 
+  year      = {2018},
+  year      = {2015}, 
+  month     = nov # "~11-16, ",
+  pages     = {83-93},
+  doi       = {10.1109/SC.2018.00010}, 
+  ISSN      = {null},
+  address   = {Dallas, TX, USA}
+}
+
+@INPROCEEDINGS{6903564,
+  author    = {D. {Tiwari} and S. {Gupta} and S. S. {Vazhkudai}}, 
+  booktitle = {44th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN) 2014}, 
+  title     = {Lazy Checkpointing: {Exploiting} Temporal Locality in Failures to Mitigate Checkpointing Overheads on Extreme-Scale Systems}, 
+  year      = {2014}, 
+  month     = jun # "~23-26, ",
+  pages     = {25-36},
+  doi       = {10.1109/DSN.2014.101}, 
+  ISSN      = {2158-3927},
+  address   = {Atlanta, GA, USA}
+}
+
+@INPROCEEDINGS{8809553,
+  author    = {S. {Di} and H. {Guo} and E. {Pershey} and M. {Snir} and F. {Cappello}},
+  booktitle = {49th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN) 2019}, 
+  title     = {Characterizing and Understanding {HPC} Job Failures Over The 2K-Day Life of {IBM BlueGene/Q} System},
+  year      = {2019},
+  pages     = {473-484},
+  doi       = {10.1109/DSN.2019.00055}, 
+  ISSN      = {1530-0889},
+  month     = jun # "~24-27, ",
+  address   = {Portland, OR, USA}
+}
+
+@INPROCEEDINGS{6903615, 
+  author    = {C. D. {Martino} and Z. {Kalbarczyk} and R. K. {Iyer} and F. {Baccanico} and J. {Fullop} and W. {Kramer}}, 
+  booktitle = {44th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN) 2014}, 
+  title     = {Lessons Learned from the Analysis of System Failures at Petascale: {The} Case of {Blue Waters}}, 
+  year      = {2014},
+  month     = jun # "~23-26, ",
+  pages     = {610-621}, 
+  doi       = {10.1109/DSN.2014.62}, 
+  ISSN      = {2158-3927},
+  address   = {Atlanta, GA, USA}
+}
+
+@inproceedings{10.1145/2807591.2807666,
+  author    = {Tiwari, Devesh and Gupta, Saurabh and Gallarno, George and Rogers, Jim and Maxwell, Don},
+  title     = {Reliability Lessons Learned from {GPU} Experience with the {Titan} Supercomputer at {Oak Ridge Leadership Computing Facility}},
+  year      = {2015},
+  isbn      = {9781450337236},
+  publisher = {Association for Computing Machinery},
+  url       = {https://doi.org/10.1145/2807591.2807666},
+  doi       = {10.1145/2807591.2807666},
+  booktitle = {Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis (SC) 2015},
+  numpages  = {12},
+  address   = {Austin, TX, USA}
+}
+
+@inproceedings{osti_1086655,
+  author    = {Ezell, Matthew A},
+  title     = {Understanding the Impact of Interconnect Failures on System Operation},
+  booktitle = {Proceedings of the Cray User Group Conference (CUG) 2013},
+  year      = {2013},
+  month     = may # "~6-9, ",
+  address   = {Napa Valley, CA, USA}
+}
+
+@INPROCEEDINGS{7446091,
+  author    = {B. {Nie} and D. {Tiwari} and S. {Gupta} and E. {Smirni} and J. H. {Rogers}},
+  booktitle = {IEEE International Symposium on High Performance Computer Architecture (HPCA) 2016},
+  title     = {A large-scale study of soft-errors on {GPUs} in the field},
+  year      = {2016},
+  month     = mar # "~12-16, ",
+  pages     = {519-530},
+  address   = {Barcelona, Spain}
+}
+
+@INPROCEEDINGS{7266836,
+  author    = {S. {Gupta} and D. {Tiwari} and C. {Jantzi} and J. {Rogers} and D. {Maxwell}},
+  title     = {Understanding and Exploiting Spatial Properties of System Failures on Extreme-Scale {HPC} Systems},
+  booktitle = {45th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN) 2015},
+  year      = {2015},
+  month     = jun # "~22-25, ",
+  pages     = {37-44},
+  address   = {Rio de Janeiro, Brazil}
+}
+
+@inproceedings{Meneses15Analyzing,
+  author    = {Meneses, Esteban and Ni, Xiang and Jones, Terry and Maxwell, Don},
+  title     = {Analyzing the Interplay of Failures and Workload on a Leadership-Class Supercomputer},
+  booktitle = {Proceedings of the Cray User Group Conference (CUG) 2015},
+  year      = {2015},
+  month     = apr # "~26-30, ",
+  address   = {Chicago, IL, USA}
+}
+
+@inproceedings{Tiwari15Experience,
+  author    = {Devesh Tiwari and Saurabh Gupta and Jim Rogers and Don Maxwell },
+  title     = {Experience with GPUs on the Titan Supercomputer from a Reliability, Performance and Power Perspective},
+  booktitle = {Proceedings of the Cray User Group Conference (CUG) 2015},
+  year      = {2015},
+  month     = apr # "~26-30, ",
+  address   = {Chicago, IL, USA}
+}
