Added references to the Introduction and fixed a few things in the Introduction.

--- a/intro.tex
+++ b/intro.tex
@@ -5,8 +5,8 @@
 \section{Introduction}
 \label{section:introduction}
 
-The Cray XK7 Titan supercomputer was the \#1 system in the world for a
-very long time, and has remained a critically important computer
+The Cray XK7 Titan supercomputer~\cite{olcf:titan} was the \#1 system in the world for a
+very long time~\cite{top500list}, and has remained a critically important computer
 system through the end of its life in the Summer of 2019. It defied
 scale with 18,688 individual compute nodes and delivered tens of
 billions of computing hours to the U.S. Department of Energy
@@ -44,10 +44,10 @@ begin to rise. This results in the final rework cycle, replacing
 11,000 GPUs throughout much of 2017.
 
 The failures were traced to a failing resistor on the circuitboard
-(not the GPU iself) While the 2016 resistor failures were a surprise, there is a known
-phenomenon \cite{referenceneeded} that describes a two phase process
+(not the GPU iself). While the 2016 resistor failures were a surprise, there is a known
+phenomenon~\cite{referenceneeded} that describes a two phase process
 that leads to failure. It also explains why there was a very stable
-period preceeding the failures. There is specific decay associated
+period preceding the failures. There is specific decay associated
 with the electronic components where, as these products age, they will
 eventually fail thresholds for guard band margin and other things. In
 a lot of cases, they will just fail as well. \fix{Give a reference and
