--- a/refs.bib
+++ b/refs.bib
@@ -3,6 +3,20 @@
 % References
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@misc{olcf:titan,
+  author        = "{Oak Ridge Leadership Computing Facility}",
+  title         = "{Titan supercomputer}",
+  year          = "2020",
+  url           = "https://www.olcf.ornl.gov/olcf-resources/compute-systems/titan/"
+}
+
+@misc{top500list,
+  author        = "Hans Meuer and Erich Strohmaier and Jack Dongarra and Horst Simon",
+  title         = "{Top 500 List of Supercomputer Sites}",
+  year          = "2020",
+  note          = "\url{http://www.top500.org}"
+}
+
 @article{Cox1972,
   author  = {D. R. Cox},
   journal = {Journal of the Royal Statistical Society. Series B
