Fixed related work section.

--- a/related.tex
+++ b/related.tex
@@ -35,4 +35,4 @@ Both approaches, Bautista-Gomez et al. and Tiwari et al., aim at dealing with th
 
 Other work in characterizing supercomputer faults, errors and failures focused on the various systems deployed around the world, primarily at US Department of Energy laboratories.
 %
-Di et al.~\cite{8809553} developed an in-depth understanding of the failure characteristics of the IBM Blue Gene/Q Mira system at Argonne National Laboratory. This work showed that 99.4\% of job failures were due to user behavior, such as errors in the code or misconfiguration. Martino et al.~\cite{6903615} characterized the errors and failures of the Blue Waters Cray XE6/XK7 system at the National Center for Supercomputing Applications (NCSA), at the University of Illinois at Urbana-Champaign. Blue Waters's XK7 partition had the same architecture as Titan, but did not experience the same GPU failure mode as Titan that is detailed in this paper. The results showed that 74.4\% of system-wide outages in Blue Waters was caused by software.
+Di et al.~\cite{8809553} developed an in-depth understanding of the failure characteristics of the IBM Blue Gene/Q Mira system at Argonne National Laboratory. This work showed that 99.4\% of job failures were due to user behavior, such as errors in the code or misconfiguration. Martino et al.~\cite{6903615} characterized the errors and failures of the Blue Waters Cray XE6/XK7 system at the National Center for Supercomputing Applications (NCSA), at the University of Illinois at Urbana-Champaign. The results showed that 74.4\% of system-wide outages in Blue Waters were caused by software. Blue Waters's XK7 partition had the same architecture as Titan, but did not experience the same GPU failure mode detailed in this paper.
