minor correction in tbf section

--- a/tbf.tex
+++ b/tbf.tex
@@ -51,7 +51,7 @@ result to later in the paper?}
     \includegraphics[width=\columnwidth]{figs/MTBF_quaterly_sys.pdf}
   \end{center}
   \caption{Variation of system-wide MTBF over the lifetime of the machine (time is segmented into quarters, 
-i.e., January through April is Q1 and so on).}
+i.e., January through March is Q1 and so on).}
   \label{fig:MTBF_sys}
 \end{figure}
 
@@ -65,7 +65,7 @@ are in operation so any variation in time-between-failures is due to individual 
 That said, a single MTBF number does not give an accurate picture of this machine.
 With many GPU relocations and replacements across the machine over its lifetime, it is 
 best to consider the variation of MTBF across fixed periods. Herein, we calculate 
-the mean of time-between-failures across four months. Figure~\ref{fig:MTBF_sys}
+the mean of time-between-failures across three months. Figure~\ref{fig:MTBF_sys}
 clearly shows the considerable change in system-wide MTBF from one period to another. 
 The observation of the MTBF trend shows the different phases which the machine went through. 
 For example, when considering failure due to both DBE and OTB events more than 4X drop in MTBF is 
