Worked mostly on the discussion section.

--- a/refs.bib
+++ b/refs.bib
@@ -10,6 +10,13 @@
   url           = "https://www.olcf.ornl.gov/olcf-resources/compute-systems/titan/"
 }
 
+@misc{olcf:summit,
+  author        = "{Oak Ridge Leadership Computing Facility}",
+  title         = "{Titan supercomputer}",
+  year          = "2020",
+  url           = "https://www.olcf.ornl.gov/olcf-resources/compute-systems/summit/"
+}
+
 @misc{top500list,
   author        = "Hans Meuer and Erich Strohmaier and Jack Dongarra and Horst Simon",
   title         = "{Top 500 List of Supercomputer Sites}",
@@ -290,4 +297,13 @@
   year      = {2015},
   month     = apr # "~26-30, ",
   address   = {Chicago, IL, USA}
+}
+
+@article{geist12kill,
+  author        = {Al Geist},
+  title         = {How To Kill A Supercomputer: Dirty Power, Cosmic Rays, and Bad Solder},
+  journal       = {{IEEE} Spectrum},
+  year          = "2016",
+  month         = feb # "23, ",
+  url           = "https://spectrum.ieee.org/computing/hardware/how-to-kill-a-supercomputer-dirty-power-cosmic-rays-and-bad-solder"
 }
