added side view

--- a/dataprep.tex
+++ b/dataprep.tex
@@ -82,18 +82,20 @@ Figure~\ref{fig:layout}.
   \centering
   \begin{minipage}{0.49\columnwidth}
     \includegraphics[width=\columnwidth]{figs/TitanCabinet.png}
+    \includegraphics[width=0.9\columnwidth]{figs/TitanCabinetSide.png}
   \end{minipage}
   \begin{minipage}{0.49\columnwidth}
     \includegraphics[width=\columnwidth]{figs/TitanBlade.png}
-    
-    \vspace{5em}
+
+    \vspace{0.8\columnwidth}
     \includegraphics[width=\columnwidth]{figs/TitanLayout.png}
   \end{minipage}
-  \caption{Titan cabinet, blade, and floor layout. Cooling airflow is
-    bottom to top within a cabinet, taking ambient air in at the foot
-    and relasing it back out at the top. Cooling fluid is passed
-    through two heat exchangers, one below Cage 0 and one above Cage
-    2.}
+  \caption{Titan cabinet (front view and side view with air flow) on
+    the left, blade layout and floor layout on the right. Cooling
+    airflow is bottom to top within a cabinet, taking ambient air in
+    at the foot and relasing it back out at the top. Cooling fluid is
+    passed through two heat exchange evaporators, one below Cage 0 and
+    one above Cage 2.}
   \label{fig:layout}
 \end{figure}
 
