--- a/survival.tex
+++ b/survival.tex
@@ -12,66 +12,72 @@
     differences based on {\tt cage} and {\tt node} GPU locations.}
   \label{fig:km-all-cage-node}
 \end{figure*}
-The construction of a GPU life time is more complex than it initially
-appears because the units are observed only at reboot time, because
-most units were proactively replaced to prevent failure, and because
-some units continue in operation after OTB and DBE events (a second
-reboot may be successful).
+In this section we apply survival analysis methods (time to event
+analysis), which use and combine information across the operational
+lifetimes of all GPUs \cite{survival}. For these analyses, we take
+apart the location string of each GPU into variables {\em col, row,
+  cage, slot, and node} and study the influence of the locations on
+the GPU life times. The construction of a GPU life time is more
+complex than it initially appears because the units are observed only
+at reboot time, because most units were proactively replaced to
+prevent failure, and because some units continue in operation after
+OTB and DBE events (when a second reboot may be successful).
 
 A unit that experiences at least one OTB or DBE event and is removed
 from the system is considered failed and its operation time until the
 last seen time is taken as its life time. Although most failed units
-experience one of these events at the last seen time, this is
-imperfect because some units experience OTB or DBE events at a time
-different from its last seen time. We found this definition of life
-time the most pragmatic for the study with few imperfect
-observations. One exception is if the last seen time is the final
-Titan shutdown time, in which case such a unit is not considered
-failed.
+experience one of these events at the last seen time, our definition
+is not perfect because some units experience OTB or DBE events at a
+time different from its last seen time. Such units were relatively few
+so we consider this definition of life time as the most pragmatic.
 
-A key concept in survival analysis and in reliability analysis is
-censoring, which is about using information from study subjects whose
-exact failure times are not available or that have not failed. This
-applies to our study because of proactive GPU replacement before
-failure, because most units were still in operation when the system
-was shut down, and also because of observation only at inspection
-times (reboots). We use censoring concepts on the proactive
-replacements and units still in operation at the end. This allows us
-to use all of the GPU life time data, including units that did not
-fail. But we ignore the inspection time censoring, treating removal
-times as exact failure times to reduce the complexity of this
-analysis. We expect that because of the volume of data, this would
-make much difference in our conclusions. However, we are making our
-data publicly available and expect that others, especially in the
-survival analysis community, will dive deeper.
+A key concept in survival analysis is censoring, which is about using
+information from study subjects whose exact failure times are not
+available or that have not failed. This applies to our study because
+of proactive GPU replacement before failure, because most units were
+still in operation when the system was shut down, and also because
+life spans were recorded only at inventory times. We use censoring
+concepts on the proactive replacements and units still in operation at
+the end. This allows us to use all of the GPU life time data,
+including units that did not fail. But we ignore the inspection time
+censoring, treating inventory times as exact failure times to reduce
+the complexity of this analysis. We expect that because of the volume
+of data and length of operation time, this would not make much
+difference in our conclusions. However, we are making our data
+publicly available and expect that others, especially in the survival
+analysis community, will dive deeper.
 
-Kaplan-Meier survival analysis (KM) gives the probability of survival
-beyond a given time. It is a nonparametric technique that makes no
-specific failure model assumptions, such as Weibull, Exponential,
-etc. The technique is able to use censored observations and can also
-split the data into subpopulations to compute separate survival
-curves.
+Kaplan-Meier survival analysis (KM) starts with computing the
+probability of survival beyond a given time. It is a nonparametric
+technique that makes no specific failure model assumptions, such as
+Weibull, Exponential, etc. The technique is able to use censored
+observations and can also split the data into subpopulations to
+compute separate survival curves.
 
-If $T$ is taken to be the random variable of a GPU fail time, then its
-probability density function is $f(t)$ and its cumulative distribution
-function $F(t) = Pr\{T < t\}$ gives the probability that a GPU fails
-by duration $t$. The survival function is then its complement
+If $T$ is the random variable of a GPU fail time, then its cumulative
+distribution function $F(t) = Pr\{T < t\}$ gives the probability that
+a GPU fails by duration $t$. The survival function is its complement
 \begin{displaymath}
-  S(t) = Pr\{T \geq t\} = 1 - F(t) = \int_t^\infty f(x)dx.
+  S(t) = Pr\{T \geq t\} = 1 - F(t).
 \end{displaymath}
 It is the probability of being operational at duration $t$.  We use
 the R packages \pkg{survival} and \pkg{survminer} for the KM analysis,
 which is reported in Figure~\ref{fig:km-all-cage-node}. Within each
-batch, separate survival curves are computed for each cage by node
-combination. 
+{\em batch}, separate survival curves are computed for each {\em cage}
+by {\em node} combination. 
 
 Another standard survival data methodology is a Cox proportional
 hazards (CPH) regression analys, which can include covariates and
 estimate relative risk based on the covariates
 \cite{Cox1972,Harrell2015}. The CPH regression function takes the form
 \begin{displaymath}
-  H_k(t) = H_0(t)e^{\sum\limits_{i=1}^n{\beta x}}
+  h(t) = h_0(t)e^{b_1 x_1 + b_2 x_2 \ldots b_k x_k},
 \end{displaymath}
+where $x_i$ are covariates, $h_0(t)$ is the {\em baseline hazard}, and
+the $b_i$ are coefficients that measure the impact of the
+covariates. The quantity $e^{b_i}$ is the hazard ratio for covariate
+$i$. Its interpretation 
+
 That is, a base hazard rate multiplied by a function of
 covariates. The key assumption in the CPH model is that the "hazards"
 are multipliers on the "baseline hazard" but the estimate of the
