--- a/intro.tex
+++ b/intro.tex
@@ -44,21 +44,24 @@ begin to rise. This results in the final rework cycle, replacing
 11,000 GPUs throughout much of 2017.
 
 The failures were traced to a failing resistor on the circuitboard
-(not the GPU iself). While the 2016 resistor failures were a surprise, there is a known
-phenomenon~\cite{referenceneeded} that describes a two phase process
-that leads to failure. It also explains why there was a very stable
-period preceding the failures. There is specific decay associated
-with the electronic components where, as these products age, they will
-eventually fail thresholds for guard band margin and other things. In
-a lot of cases, they will just fail as well. \fix{Give a reference and
-  expand?}
+(not the GPU chip iself). Throughout this paper, when we refer to
+replacing the GPU, we refer to the entire circuitboard along with its
+GPU chip. While the 2016 resistor failures were a surprise, there is a
+known phenomenon~\cite{referenceneeded} that describes a two phase
+process that leads to failure. It also explains why there was a very
+stable period preceding the failures. There is specific decay
+associated with the electronic components where, as these products
+age, they will eventually fail thresholds for guard band margin and
+other things. In a lot of cases, they will just fail as
+well. \fix{Give a reference and expand?}
 
 Our analysis focuses on GPUs that were installed in the second rework
 cycle and later, essentialy units installed near the beginning of 2014
-and later. \fix{Will we (are we required) make the data publicly
-  available?} The data used in this study, representing over 100,000
-years of operation may be the largest publicly available GPU
-reliability data set.
+and later. We will make the data as well as our analysis codes
+producing the graphics available in a public repository (see
+\fix{reference?}).  The data used in this study, while only a 7 MB
+file, represents over 100,000 years of operation and may be the
+largest publicly available GPU reliability data set.
 
 We begin by describing related work in Sec.~\ref{section:related}. Our
 data collection is desctibed in Sec.~\ref{section:dataprep} and the
