--- a/survival.tex
+++ b/survival.tex
@@ -64,7 +64,31 @@ It is the probability of being operational at duration $t$.  We use
 the R packages \pkg{survival} and \pkg{survminer} for the KM analysis,
 which is reported in Figure~\ref{fig:km-all-cage-node}. Within each
 {\em batch}, separate survival curves are computed for each {\em cage}
-by {\em node} combination. 
+by {\em node} combination. Along with the survival curve estimate,
+this analysis provides 95\% confidence region for survival probability
+shaded around the curves.
+
+It appears that transport of cooling air provides a complete
+explanation for relative differences in cage and node survival rates
+in the old batch.  We reach this conclusion with reference to
+Figure~\ref{fig:layout} and relative positions of cages and nodes
+within a cabinet. Both cage and node differences in survival
+probabilities can be explained by an inverse relationship with the
+distance to the bottom of the cabinet, where cooling air is forced
+through the cabinet to the top. The survival curves can be ordered
+({\em cage 0, cage 1, cage 2}) in decreasing order of survival. As the
+blades are placed vertically within the cabinet, pairs of nodes too
+experience the same relationship with distance to the bottom, nodes 2
+and 3 having lower failure rates than nodes 0 and 1.
+
+The survival curves for the new batch are uninteresting as very few
+failures have occurred in the three years they have been in operation.
+
+We don't see a ``bathtub curve'' phenomenon, in fact the opposite is
+apparent in cages 1 and 2 of the old batch. The slope of the survival
+curve is related to the hazard rate. There does not seem to be an
+early ``infant mortality'' period nor a ``wearout'' phenomenon at the
+end.
 
 Another standard survival data methodology is a Cox proportional
 hazards (CPH) regression analys, which can include covariates and
@@ -76,79 +100,32 @@ estimate relative risk based on the covariates
 where $x_i$ are covariates, $h_0(t)$ is the {\em baseline hazard}, and
 the $b_i$ are coefficients that measure the impact of the
 covariates. The quantity $e^{b_i}$ is the hazard ratio for covariate
-$i$. Its interpretation 
+$i$.
 
-That is, a base hazard rate multiplied by a function of
-covariates. The key assumption in the CPH model is that the "hazards"
-are multipliers on the "baseline hazard" but the estimate of the
-baseline hazard is nonparametric, meaning it makes no specific
-distributional assumption and just learns from the data (unlike
-analyses that assume for example a Weibul or an exponential
-model). The multiplicative assumption is that the hazard curves do not
-cross and are multiples of each other. The multiplier is the *hazard
-coefficient*. For example, if the baseline is *node0* and the *node2*
-hazard is 2, then *node2* sees twice as many failures as *node0* on
-average. 
-
-For our comparison of hazards, we use as *covariates* all the unpacked
-location variables, indicators whether the GPU has been moved, and our
-notion of old and new GPUs based on first install date. Since many
-GPUs experience time at more than one location, we use the longest
-period location in this analysis. 
-
-First, we do a univariate analysis for each covariate separately and
-then we look at a multivariate view of this. Having multiple
-covariates is called "multiple regression" as opposed to "multivariate
-regression" reserved for cases with several response variables. The
-univariate view is comparable to what would one see in a simple time
-between failures analysis for a given population split. It can be
-affected by sampling differences for other covariates. For example, if
-the strongest effect is seen in a variable not used in a split and its
-values are unevenly distributed across the split, its effect can leak
-into the split. This is why we also do a multivariate analysis, where
-the effect of each covariate is adjusted for all the other
-covariates. 
- 
-
+CPH is considered a semi-parametric model as there are no assumptions
+about the shape of the baseline hazard function. But its main
+assumption is that the hazards are proportional. There are a number of
+tests for this, including graphical diagnostics in the \pkg{survminer}
+package as well as checking that survival curves for categorical
+covariates do not cross. We ran these diagnostics and concluded that
+the hazards for our location categories are approximately
+proportional. However, the {\em batch} survival functions do cross and
+so we fit the model to the new and the old batches separately. The
+results are presented in Figures~\ref{fig:cox-old}
+and~\ref{fig:cox-new}.
 \begin{figure}
   \centering
   \includegraphics[width=0.8\columnwidth]{figs/cox_o001.pdf}
   \caption{GPU hazard ratios from Cox regression model on {\tt old}
     batch.}
+  \label{fig:cox-old}
 \end{figure}
 \begin{figure}
   \centering
   \includegraphics[width=0.8\columnwidth]{figs/cox_n001.pdf}
   \caption{GPU hazard ratios from Cox regression model on {\tt new}
     batch.}
+  \label{fig:cox-new}
 \end{figure}
 
-Higher numbered columns appear to have a higher (up to about 2x)
-failure rate. There actually seems to be a hint of three groups that
-have similar rates: 0-6 baseline, 7-16 are 1.5x baseline, and 17-24
-are 2x baseline. 
-
-Higher numbered rows tend to have a lower (up to about 0.5x) failure rate.
-
-This seems surprisingly strong! Higher numbered cages have failure
-rates 5x and 16x higher than cage = 0. In fact, this seems so strong
-that its effect could be leaking into all other comparisons under
-uneven sampling!
-
-Not much difference between slots. They are all close to the baseline
-slot0.
-
-Interestingly, nodes 2 and 3 have half the failure rate of nodes 0 and
-1. Is this related to the cage variable or is there a real location
-effect?
-
-Now the multivariate Cox regression analysis, where each factor is
-adjusted for all the other factors. This can fix some uneven sampling
-and multivariate dependence. 
-
-The col groups persist and are even stronger. The row effect is also
-stronger. The cage effect is out of this world! slot is still without
-any effect. node effect also persists and is a bit stronger. 
-
-Let’s separate the “old” and “new” batches of GPUs and run separate
-Cox models. 
+\fix{Need to add interpretation}
