Improved the discussion section.

--- a/discussion.tex
+++ b/discussion.tex
@@ -92,5 +92,5 @@ Supercomputer center policies regarding reliability monitoring, resource
 allocation and checkpointing strategies need to be powerful and flexible enough
 to facilitate mitigation for such unexpected reliability threats. System
 acquisition contracts may need to include performance requirements for degraded
-operation, such as a 60\% performance capability if the MTBF drops by a
-magnitude.
+operation, such as a certain percentage of performance capability if the MTBF
+drops by a magnitude.
