--- a/survival.tex
+++ b/survival.tex
@@ -133,4 +133,11 @@ and~\ref{fig:cox-new}.
   \label{fig:cox-new}
 \end{figure}
 
-\fix{Need to add interpretation}
+We find that the average hazard ratios strongly correlate with
+detailed nuances of the system cooling architecture.  The figures give
+hazard ratios for each of the location variables, giving the ratio for
+each level compared to its first (0) level (the 0 level is always
+1). Due to the exponential nature of the CPH model, the horizontal
+hazard ratio axis is on a log scale. The estimates include
+uncertainty, which too is most reliably computed on a log scale (see,
+for example, \cite{Ostrouchov88}).
